--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-handlebars": "^4.0.4",
         "handlebars": "^4.7.6",
+        "nodemon": "^2.0.4",
         "passport": "^0.4.1",
         "pg": "^8.2.1",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^5.21.10"
+        "sequelize": "^5.21.10",
+        "update": "^0.7.4"
     }
 }
