--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "connect-flash": "^0.1.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^4.0.4",
+        "express-session": "^1.17.1",
         "handlebars": "^4.7.6",
         "nodemon": "^2.0.4",
         "passport": "^0.4.1",
