--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "bcrypt": "^4.0.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "connect-flash": "^0.1.1",
         "dotenv": "^8.2.0",
@@ -20,9 +20,9 @@
         "handlebars": "^4.7.6",
         "nodemon": "^2.0.4",
         "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "pg": "^8.2.1",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^5.21.10",
-        "update": "^0.7.4"
+        "sequelize": "^5.21.10"
     }
 }
