--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "nodemon": "^2.0.4",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "passport-twitter": "^1.0.4",
         "pg": "^8.2.1",
         "pg-hstore": "^2.3.3",
         "sequelize": "^5.21.10"
