--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "handlebars": "^4.7.6",
         "nodemon": "^2.0.4",
         "passport": "^0.4.1",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth": "^2.0.0",
         "passport-local": "^1.0.0",
         "passport-twitter": "^1.0.4",
         "pg": "^8.2.1",
