--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DB=
 DB_USER=
 DB_PASSWORD=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
